--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,20 +3,21 @@
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=DP-1,1920x1080@60.00,0x0,1
-monitor=HDMI-A-1,3840x2160@60.00,1080x0,1
-monitor=DP-2,1920x1080@60.00,4920x0,1
+monitor=DP-2,2560x1440@60.00,2880x0,1
+monitor=DP-3,2560x1440@60.00,1440x0,1
+monitor=DP-4,2560x1440@60.00,0x0,1
 
-monitor=DP-1,transform,1
 monitor=DP-2,transform,3
+monitor=DP-3,transform,1
+monitor=DP-4,transform,1
 
-workspace=DP-1,1
-workspace=HDMI-A-1,2
-workspace=DP-2,3
+workspace=DP-2,1
+workspace=DP-3,2
+workspace=DP-4,3
 
-wsbind=1,DP-1
-wsbind=2,HDMI-A-1
-wsbind=3,DP-2
+wsbind=1,DP-2
+wsbind=2,DP-3
+wsbind=3,DP-4
 
 input {
     kb_file=
@@ -95,6 +96,8 @@ bind=SUPER,p,pseudo
 bind=SUPER,C,killactive,
 bind=SUPER,Q,exit,
 bind=SUPER,F,fullscreen,
+
+bind=SUPER,T,togglefloating,
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
