add rofi as launcher

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -83,18 +83,23 @@ misc {
 #windowrule=float,abc
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
+windowrulev2=float,class:Rofi
+windowrulev2=workspace 2,class:Rofi
+windowrulev2=noanim,class:Rofi
 
-# some nice mouse binds
+
+# mouse binds
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-# example binds
+# keyboard binds
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,O,exec,bemenu
-bind=SUPER,p,pseudo
+bind=SUPER,S,pseudo
 bind=SUPER,C,killactive,
 bind=SUPER,Q,exit,
 bind=SUPER,F,fullscreen,
+bind=SUPER,T,togglefloating,
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
@@ -111,3 +116,5 @@ bind=ALT,3,movetoworkspace,3
 
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
+
+bind=SUPER,P,exec,rofi -config ~/.config/hypr/rofi-config.rasi -show run
