--- a/hyprland.conf
+++ b/hyprland.conf
@@ -21,10 +21,10 @@ wsbind=3,DP-4
 
 input {
     kb_file=
-    kb_layout=
+    kb_layout=us
     kb_variant=
     kb_model=
-    kb_options=
+    kb_options=compose:lctrl
     kb_rules=
 
     follow_mouse=1
@@ -84,19 +84,22 @@ misc {
 #windowrule=float,abc
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
+windowrulev2=float,class:Rofi
+windowrulev2=workspace 2,class:Rofi
+windowrulev2=noanim,class:Rofi
 
-# some nice mouse binds
+
+# mouse binds
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-# example binds
+# keyboard binds
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,O,exec,bemenu
-bind=SUPER,p,pseudo
+bind=SUPER,S,pseudo
 bind=SUPER,C,killactive,
 bind=SUPER,Q,exit,
 bind=SUPER,F,fullscreen,
-
 bind=SUPER,T,togglefloating,
 
 bind=SUPER,H,movefocus,l
@@ -114,3 +117,5 @@ bind=ALT,3,movetoworkspace,3
 
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
+
+bind=SUPER,P,exec,rofi -config ~/.config/hypr/rofi-config.rasi -show run
