--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,7 +24,7 @@ input {
     kb_layout=us
     kb_variant=
     kb_model=
-    kb_options=compose:lctrl
+    kb_options=compose:ralt
     kb_rules=
 
     follow_mouse=1
