--- a/hyprland.conf
+++ b/hyprland.conf
@@ -3,20 +3,19 @@
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=DP-1,1920x1080@60.00,0x0,1
-monitor=HDMI-A-1,3840x2160@60.00,1080x0,1
-monitor=DP-2,1920x1080@60.00,4920x0,1
+monitor=eDP-1,2880x1800@90.00,0x1660,2
+monitor=DP-3,2560x1440@59.95100,1440x0,1
+monitor=DP-1,2560x1440@59.95100,2880x0,1
+monitor=HDMI-A-1,2560x1440@59.95100,4320x0,1
 
+monitor=DP-3,transform,1
 monitor=DP-1,transform,1
-monitor=DP-2,transform,3
+monitor=HDMI-A-1,transform,1
 
-workspace=DP-1,1
-workspace=HDMI-A-1,2
-workspace=DP-2,3
-
-wsbind=1,DP-1
-wsbind=2,HDMI-A-1
-wsbind=3,DP-2
+workspace=eDP-1,1
+workspace=DP-2,2
+workspace=DP-1,3
+workspace=HDMI-A-1,4
 
 input {
     kb_file=
@@ -37,7 +36,6 @@ input {
 }
 
 general {
-    main_mod=SUPER
     gaps_in=5
     gaps_out=0
     border_size=2
@@ -48,10 +46,6 @@ general {
 
 decoration {
     rounding=10
-    blur=1
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1
-    blur_new_optimizations=1
 }
 
 animations {
